[package]
name         = "cksfv"
version      = "0.1.0"
authors      = ["Martin Larralde <martin.larralde@embl.de>"]
edition      = "2018"
license      = "MIT"
description  = "A 10x faster cksfv reimplementation using Rust and the crc32fast crate."
repository   = "https://github.com/althonos/cksfv.rs"
readme       = "README.md"
keywords     = ["cksfv", "crc", "integrity", "checksum", "foss"]
categories   = ["command-line-utilities"]

[badges.travis-ci]
repository = "althonos/cksfv.rs"
[badges.codecov]
repository = "althonos/cksfv.rs"
service    = "github"
[badges.is-it-maintained-issue-resolution]
repository = "althonos/cksfv.rs"
[badges.maintenance]
status     = "actively-developed"

[dependencies]
clap = "*"
chrono = "*"
getset = "*"
walkdir = "*"

[dependencies.crc32fast]
version = "*"

[dependencies.memmap]
version = "*"
optional = true

[dev-dependencies]
assert_cli = "*"
tempfile = "*"
textwrap = "*"
textwrap-macros = "*"

[features]
mmap = ["memmap"]
nightly = ["crc32fast/nightly"]
default = []
