[package]
name         = "cksfv"
version      = "0.1.1"
authors      = ["Martin Larralde <martin.larralde@embl.de>"]
edition      = "2018"
license      = "MIT"
description  = "A 10x faster cksfv reimplementation using Rust and the crc32fast crate."
repository   = "https://github.com/althonos/cksfv.rs"
readme       = "README.md"
keywords     = ["cksfv", "crc", "integrity", "checksum", "foss"]
categories   = ["command-line-utilities"]

[badges.travis-ci]
repository = "althonos/cksfv.rs"
[badges.codecov]
repository = "althonos/cksfv.rs"
service    = "github"
[badges.is-it-maintained-issue-resolution]
repository = "althonos/cksfv.rs"
[badges.maintenance]
status     = "actively-developed"

[dependencies]
clap = "3.2.6"
chrono = "0.4.13"
getset = "0.1.1"
walkdir = "2.3.1"

[dependencies.crc32fast]
version = "1.2.0"

[dependencies.memmap]
version = "0.7.0"
optional = true

[dev-dependencies]
assert_cli = "0.6.3"
tempfile = "3.1.0"
textwrap = "0.12.1"
textwrap-macros = "0.2.5"

[features]
mmap = ["memmap"]
nightly = ["crc32fast/nightly"]
default = []
